--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@mantine/core": "^6.0.17",
+    "@mantine/ds": "^6.0.17",
     "@mantine/hooks": "^6.0.17",
     "autoprefixer": "10.4.14",
     "eslint": "8.45.0",
@@ -19,6 +20,11 @@
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3"
+    "react-icons": "^4.10.1",
+    "tailwindcss": "3.3.3",
+    "zustand": "^4.4.0"
+  },
+  "devDependencies": {
+    "daisyui": "^3.5.0"
   }
 }
